--- a/src/components/Steps.astro
+++ b/src/components/Steps.astro
@@ -4,19 +4,47 @@
 
 <style is:global>
   .steps {
-    --at-apply: ml-4 mb-12 pl-8 border-l;
+    margin-left: 1rem;
+    margin-bottom: 3rem;
+    padding-left: 2rem;
+    border-left-width: 1px;
     counter-reset: step;
     border-left-style: solid;
   }
 
   .steps > h3 {
-    --at-apply: text-base leading-6 font-semibold -tracking-wide mt-8 mb-4 scroll-m-20;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    line-height: 1.5rem;
+    font-weight: 600;
+    letter-spacing: -0.025em;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    scroll-margin: 5rem;
     counter-increment: step;
   }
 
   .steps > h3::before {
-    --at-apply: border-background bg-muted absolute inline-flex h-9 w-9
-    items-center justify-center text-center -indent-px text-base leading-6
-     font-medium ml-[-50px] content-[counter(step)] -mt-1 rounded-full border-4;
+    --un-bg-opacity: 1;
+    background-color: hsl(var(--muted) / var(--un-bg-opacity));
+    position: absolute;
+    display: inline-flex;
+    height: 2.25rem;
+    width: 2.25rem;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    text-indent: -1px;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    line-height: 1.5rem;
+    font-weight: 500;
+    margin-left: -50px;
+    content: counter(step);
+    margin-top: -0.25rem;
+    border-radius: 9999px;
+    border-width: 4px;
+    --un-border-opacity: 1;
+    border-color: hsl(var(--background) / var(--un-border-opacity));
   }
 </style>
