--- a/src/components/Drawer.astro
+++ b/src/components/Drawer.astro
@@ -62,11 +62,23 @@ const { siteTitleHref, sidebar } = Astro.locals.starlightRoute
 
 <style>
   button {
-    --at-apply: [all:unset];
+    all: unset;
   }
 
   [popover] {
-    --at-apply: fixed top-0 left-0 w-screen h-screen flex op-0 pointer-events-none items-center flex-col justify-end z-[1000] border-[none];
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    opacity: 0;
+    pointer-events: none;
+    align-items: center;
+    flex-direction: column;
+    justify-content: flex-end;
+    z-index: 1000;
+    border-color: none;
     transition: 0.1s linear;
     background: transparent;
   }
@@ -76,66 +88,133 @@ const { siteTitleHref, sidebar } = Astro.locals.starlightRoute
   }
 
   [popover]:popover-open {
-    --at-apply: op-100 pointer-events-auto;
+    opacity: 1;
+    pointer-events: auto;
   }
 
   [popover]:popover-open .content {
-    --at-apply: translate-y-[0%];
+    --un-translate-y: 0%;
+    transform: translateX(var(--un-translate-x)) translateY(var(--un-translate-y))
+      translateZ(var(--un-translate-z)) rotate(var(--un-rotate))
+      rotateX(var(--un-rotate-x)) rotateY(var(--un-rotate-y))
+      rotateZ(var(--un-rotate-z)) skewX(var(--un-skew-x)) skewY(var(--un-skew-y))
+      scaleX(var(--un-scale-x)) scaleY(var(--un-scale-y))
+      scaleZ(var(--un-scale-z));
   }
 
   .sheet-overlay {
-    --at-apply: fixed z-[-1] w-screen h-screen opacity-10 left-0 top-0;
+    position: fixed;
+    z-index: -1;
+    width: 100vw;
+    height: 100vh;
+    opacity: 0.1;
+    left: 0;
+    top: 0;
     background-color: transparent;
   }
 
   .content {
-    --at-apply: bg-background w-full relative max-h-screen h-[50vh] max-w-[1150px]
-    translate-y-full shadow-[0_10px_20px_rgba(0,0,0,0.03)] rounded-[12px_12px_0_0];
+    --un-bg-opacity: 1;
+    background-color: hsl(var(--background) / var(--un-bg-opacity));
+    width: 100%;
+    position: relative;
+    max-height: 100vh;
+    height: 50vh;
+    max-width: 1150px;
+    --un-translate-y: 100%;
+    transform: translateX(var(--un-translate-x)) translateY(var(--un-translate-y))
+      translateZ(var(--un-translate-z)) rotate(var(--un-rotate))
+      rotateX(var(--un-rotate-x)) rotateY(var(--un-rotate-y))
+      rotateZ(var(--un-rotate-z)) skewX(var(--un-skew-x)) skewY(var(--un-skew-y))
+      scaleX(var(--un-scale-x)) scaleY(var(--un-scale-y))
+      scaleZ(var(--un-scale-z));
+    --un-shadow: 0 10px 20px var(--un-shadow-color, rgba(0, 0, 0, 0.03));
+    box-shadow: var(--un-ring-offset-shadow), var(--un-ring-shadow),
+      var(--un-shadow);
+    border-radius: 12px 12px 0 0;
     transition: 0.3s ease;
   }
 
   .header {
-    --at-apply: flex justify-center;
+    display: flex;
+    justify-content: center;
   }
 
   .header .drag-icon span {
-    --at-apply: block w-25 h-0.4 bg-muted rounded-[9999px] mt-4;
+    display: block;
+    width: 6.25rem;
+    height: 0.1rem;
+    --un-bg-opacity: 1;
+    background-color: hsl(var(--muted) / var(--un-bg-opacity));
+    border-radius: 9999px;
+    margin-top: 1rem;
   }
 
   .body {
-    --at-apply: h-full overflow-y-auto p-6;
+    height: 100%;
+    overflow-y: auto;
+    padding: 1.5rem;
   }
 
   .body::-webkit-scrollbar {
-    --at-apply: w-0;
+    width: 0;
   }
 
   .links-nav {
-    --at-apply: flex flex-col gap-3;
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
   }
 
   .links-nav a {
-    --at-apply: text-base leading-6 text-inherit [text-decoration:inherit];
+    font-size: 1rem;
+    line-height: 1.5rem;
+    line-height: 1.5rem;
+    color: inherit;
+    text-decoration: inherit;
   }
 
   .links-docs {
-    --at-apply: flex flex-col gap-2;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
   }
 
   .container-sidebar-entry {
-    --at-apply: flex flex-col gap-2 pt-6;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    padding-top: 1.5rem;
   }
 
   .entry-title {
-    --at-apply: font-medium;
+    font-weight: 500;
   }
 
   .container-sidebar-entry a {
-    --at-apply: text-base leading-6 [text-decoration:inherit] text-muted-foreground;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    line-height: 1.5rem;
+    text-decoration: inherit;
+    --un-text-opacity: 1;
+    color: hsl(var(--muted-foreground) / var(--un-text-opacity));
   }
 
   .badge {
-    --at-apply: text-xs leading-4 font-normal leading-none no-underline
-    text-black ml-2 px-1.5 py-0.5 rounded-md [background:#adfa1d];
+    text-decoration: none;
+    line-height: 1rem;
+    line-height: 1;
+    margin-left: 0.5rem;
+    padding-left: 0.375rem;
+    padding-right: 0.375rem;
+    padding-top: 0.125rem;
+    padding-bottom: 0.125rem;
+    border-radius: calc(var(--radius) - 2px);
+    background: #adfa1d;
+    font-weight: 400;
+    --un-text-opacity: 1;
+    color: rgb(0 0 0 / var(--un-text-opacity));
+    font-size: 0.75rem;
+    line-height: 1rem;
   }
 </style>
