--- a/src/overrides/Search.astro
+++ b/src/overrides/Search.astro
@@ -157,41 +157,97 @@ customElements.define('site-search', SiteSearch)
 
 <style>
   site-search {
-    --at-apply: flex;
+    display: flex;
   }
 
   button[data-open-modal] {
-    --at-apply: flex items-center cursor-pointer;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
   }
 
   .sr-only {
-    --at-apply: absolute w-px h-px overflow-hidden whitespace-nowrap -m-px p-0 border-0;
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    white-space: nowrap;
+    margin: -1px;
+    padding: 0;
+    border-width: 0px;
     clip: rect(0, 0, 0, 0);
   }
 
   dialog {
-    --at-apply: m-0 bg-background border border-solid border-border
-    w-full max-w-full h-full max-h-full shadow-lg;
+    margin: 0;
+    --un-bg-opacity: 1;
+    background-color: hsl(var(--background) / var(--un-bg-opacity));
+    border-width: 1px;
+    border-style: solid;
+    --un-border-opacity: 1;
+    border-color: hsl(var(--border) / var(--un-border-opacity));
+    width: 100%;
+    max-width: 100%;
+    height: 100%;
+    max-height: 100%;
+    --un-shadow: var(--un-shadow-inset) 0 10px 15px -3px var(--un-shadow-color, rgb(0 0 0 / 0.1)),
+      var(--un-shadow-inset) 0 4px 6px -4px var(--un-shadow-color, rgb(0 0 0 / 0.1));
+    box-shadow: var(--un-ring-offset-shadow), var(--un-ring-shadow),
+      var(--un-shadow);
   }
 
   dialog::backdrop {
-    --at-apply: bg-background/50 backdrop-blur-sm;
+    background-color: hsl(var(--background) / 0.5);
+    --un-backdrop-blur: blur(4px);
+    -webkit-backdrop-filter: var(--un-backdrop-blur) var(--un-backdrop-brightness)
+      var(--un-backdrop-contrast) var(--un-backdrop-grayscale)
+      var(--un-backdrop-hue-rotate) var(--un-backdrop-invert)
+      var(--un-backdrop-opacity) var(--un-backdrop-saturate)
+      var(--un-backdrop-sepia);
+    backdrop-filter: var(--un-backdrop-blur) var(--un-backdrop-brightness)
+      var(--un-backdrop-contrast) var(--un-backdrop-grayscale)
+      var(--un-backdrop-hue-rotate) var(--un-backdrop-invert)
+      var(--un-backdrop-opacity) var(--un-backdrop-saturate)
+      var(--un-backdrop-sepia);
   }
 
   @media (min-width: 50rem) {
     dialog {
-      --at-apply: w-[90%] max-w-screen-sm h-max min-h-[15rem]
-      max-h-[calc(100%_-_8rem)] mt-16 mb-auto mx-auto rounded-lg;
+      width: 90%;
+      max-width: 640px;
+      height: max-content;
+      min-height: 15rem;
+      max-height: calc(100% - 8rem);
+      margin-top: 4rem;
+      margin-bottom: auto;
+      margin-left: auto;
+      margin-right: auto;
+      border-radius: var(--radius);
     }
 
     .dialog-frame {
-      --at-apply: p-6;
+      padding: 1.5rem;
     }
   }
 
   button[data-close-modal] {
-    --at-apply: absolute z-[1] items-center self-end h-[calc(64px_*_var(--pagefind-ui-scale))]
-    cursor-pointer p-1 border-0 [background:transparent] text-dark dark:text-light;
+    & {
+      position: absolute;
+      z-index: 1;
+      align-items: center;
+      align-self: flex-end;
+      height: calc(64px * var(--pagefind-ui-scale));
+      cursor: pointer;
+      padding: 0.25rem;
+      border-width: 0px;
+      background: transparent;
+      --un-text-opacity: 1;
+      color: rgb(34 34 34 / var(--un-text-opacity));
+    }
+    .dark & {
+      --un-text-opacity: 1;
+      color: rgb(246 246 246 / var(--un-text-opacity));
+    }
   }
 
   #starlight__search {
@@ -210,19 +266,29 @@ customElements.define('site-search', SiteSearch)
     }
 
     dialog {
-      --at-apply: w-[90%] max-w-screen-sm h-max min-h-[15rem]
-      max-h-[calc(100%_-_8rem)] mt-16 mb-auto mx-auto rounded-lg;
+      & {
+        width: 90%;
+        max-width: 640px;
+        height: max-content;
+        min-height: 15rem;
+        max-height: calc(100% - 8rem);
+        margin-top: 4rem;
+        margin-bottom: auto;
+        margin-left: auto;
+        margin-right: auto;
+        border-radius: var(--radius);
+      }
     }
 
     .dialog-frame {
-      --at-apply: p-6;
+      padding: 1.5rem;
     }
   }
 </style>
 
 <style is:global>
   [data-search-modal-open] {
-    --at-apply: overflow-hidden;
+    overflow: hidden;
   }
 
   #starlight__search {
@@ -244,41 +310,68 @@ customElements.define('site-search', SiteSearch)
 
   #starlight__search .pagefind-ui__form::before {
     --pagefind-ui-text: var(--sl-color-gray-1);
-    --at-apply: op-100;
+    opacity: 1;
   }
 
   #starlight__search .pagefind-ui__search-input {
-    --at-apply: text-dark dark:text-light font-400 outline-none;
-    width: calc(100% - var(--sl-search-cancel-space));
+    & {
+      --un-text-opacity: 1;
+      color: rgb(34 34 34 / var(--un-text-opacity));
+      font-weight: 400;
+      outline: 2px solid transparent;
+      outline-offset: 2px;
+      width: calc(100% - var(--sl-search-cancel-space));
+    }
+    .dark & {
+      --un-text-opacity: 1;
+      color: rgb(246 246 246 / var(--un-text-opacity));
+    }
+
   }
 
   #starlight__search input:focus {
-    --at-apply: outline-none;
+    outline: 2px solid transparent;
+    outline-offset: 2px;
   }
 
   #starlight__search .pagefind-ui__search-clear {
-    --at-apply: w-[calc(60px_*_var(--pagefind-ui-scale))] bg-transparent overflow-hidden p-0;
+    width: calc(60px * var(--pagefind-ui-scale));
+    background-color: transparent;
+    overflow: hidden;
+    padding: 0;
     inset-inline-end: var(--sl-search-cancel-space);
   }
 
   #starlight__search .pagefind-ui__search-clear:focus {
-    --at-apply: outline-none;
+    outline: 2px solid transparent;
+    outline-offset: 2px;
   }
 
   #starlight__search .pagefind-ui__search-clear::before {
-    --at-apply: bg-dark dark:bg-light w-full h-full block;
-    content: '';
-    -webkit-mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='m13.41 12 6.3-6.29a1 1 0 1 0-1.42-1.42L12 10.59l-6.29-6.3a1 1 0 0 0-1.42 1.42l6.3 6.29-6.3 6.29a1 1 0 0 0 .33 1.64 1 1 0 0 0 1.09-.22l6.29-6.3 6.29 6.3a1 1 0 0 0 1.64-.33 1 1 0 0 0-.22-1.09L13.41 12Z'/%3E%3C/svg%3E")
-      center / 50% no-repeat;
-    mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='m13.41 12 6.3-6.29a1 1 0 1 0-1.42-1.42L12 10.59l-6.29-6.3a1 1 0 0 0-1.42 1.42l6.3 6.29-6.3 6.29a1 1 0 0 0 .33 1.64 1 1 0 0 0 1.09-.22l6.29-6.3 6.29 6.3a1 1 0 0 0 1.64-.33 1 1 0 0 0-.22-1.09L13.41 12Z'/%3E%3C/svg%3E")
-      center / 50% no-repeat;
+    & {
+      --un-bg-opacity: 1;
+      background-color: rgb(34 34 34 / var(--un-bg-opacity)) /* #222222 */;
+      width: 100%;
+      height: 100%;
+      display: block;
+      content: '';
+      -webkit-mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='m13.41 12 6.3-6.29a1 1 0 1 0-1.42-1.42L12 10.59l-6.29-6.3a1 1 0 0 0-1.42 1.42l6.3 6.29-6.3 6.29a1 1 0 0 0 .33 1.64 1 1 0 0 0 1.09-.22l6.29-6.3 6.29 6.3a1 1 0 0 0 1.64-.33 1 1 0 0 0-.22-1.09L13.41 12Z'/%3E%3C/svg%3E")
+        center / 50% no-repeat;
+      mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='m13.41 12 6.3-6.29a1 1 0 1 0-1.42-1.42L12 10.59l-6.29-6.3a1 1 0 0 0-1.42 1.42l6.3 6.29-6.3 6.29a1 1 0 0 0 .33 1.64 1 1 0 0 0 1.09-.22l6.29-6.3 6.29 6.3a1 1 0 0 0 1.64-.33 1 1 0 0 0-.22-1.09L13.41 12Z'/%3E%3C/svg%3E")
+        center / 50% no-repeat;
+    }
+    .dark & {
+      --un-bg-opacity: 1;
+      background-color: rgb(246 246 246 / var(--un-bg-opacity)) /* #f6f6f6 */;
+    }
   }
 
   #starlight__search .pagefind-ui__results > * + * {
     margin-top: var(--sl-search-result-spacing);
   }
   #starlight__search .pagefind-ui__result {
-    --at-apply: border-0 p-0;
+    border-width: 0px;
+    padding: 0;
   }
 
   #starlight__search .pagefind-ui__result-nested {
@@ -336,7 +429,8 @@ customElements.define('site-search', SiteSearch)
   }
 
   #starlight__search .pagefind-ui__result-inner {
-    --at-apply: items-stretch gap-1px;
+    align-items: stretch;
+    gap: 1px;
   }
 
   #starlight__search .pagefind-ui__result-link {
@@ -388,7 +482,8 @@ customElements.define('site-search', SiteSearch)
   }
 
   #starlight__search mark {
-    --at-apply: bg-background bg-op-50;
+    --un-bg-opacity: 0.5;
+    background-color: hsl(var(--background) / var(--un-bg-opacity));
     color: var(--sl-color-gray-2);
     font-weight: 600;
   }
