--- a/src/overrides/SiteTitle.astro
+++ b/src/overrides/SiteTitle.astro
@@ -41,15 +41,21 @@ const { siteTitle, siteTitleHref } = Astro.locals.starlightRoute
 
 <style>
   .logo-size {
-    --at-apply: size-6;
+    width: 1.5rem;
+    height: 1.5rem;
   }
 
   .site-title {
-    --at-apply: gap-4 items-center flex mr-2;
+    gap: 1rem;
+    align-items: center;
+    display: flex;
+    margin-right: 0.5rem;
   }
 
   .title-text {
-    --at-apply: font-700 hidden text-3;
+    font-weight: 700;
+    display: none;
+    font-size: 0.75rem;
     white-space: nowrap;
     overflow: hidden;
     color: hsl(var(--foreground)) !important;
@@ -57,32 +63,36 @@ const { siteTitle, siteTitleHref } = Astro.locals.starlightRoute
 
   @media (min-width: 480px) {
     .site-title {
-      --at-apply: gap-1.5 mr-3;
+      gap: 0.375rem;
+      margin-right: 0.75rem;
     }
 
     .title-text {
-      --at-apply: text-[0.85rem] inline-block;
+      font-size: 0.85rem;
+      display: inline-block;
     }
   }
 
   @media (min-width: 640px) {
     .site-title {
-      --at-apply: gap-2 mr-4;
+      gap: 0.5rem;
+      margin-right: 1rem;
     }
 
     .title-text {
-      --at-apply: text-[0.9rem] max-w-[150px];
-
+      font-size: 0.9rem;
+      max-width: 150px;
     }
   }
 
   @media (min-width: 1024px) {
     .site-title {
-      --at-apply: mr-6;
+      margin-right: 1.5rem;
     }
 
     .title-text {
-      --at-apply: text-4 max-w-none;
+      max-width: none;
+      font-size: 1rem;
     }
   }
 
