--- a/src/styles/mdx-table.css
+++ b/src/styles/mdx-table.css
@@ -1,40 +1,61 @@
 .sl-markdown-content table:not(:where(.not-content *)) {
-  --at-apply: w-full indent-[0] border-inherit border-collapse;
+  width: 100%;
+  text-indent: 0;
+  border-style: inherit;
+  border-collapse: collapse;
 }
 
 .sl-markdown-content table:not(:where(.not-content *)) > thead > tr {
-  --at-apply: m-0 p-0 border-t;
   border-top-style: solid;
+  margin: 0;
+  padding: 0;
+  border-top-width: 1px;
 }
 
 .sl-markdown-content table:not(:where(.not-content *)) > thead > tr > th {
-  --at-apply: font-bold text-left border px-4 py-2 border-solid;
+  font-weight: 700;
+  text-align: left;
+  border-width: 1px;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  border-style: solid;
 }
 
 .sl-markdown-content table:not(:where(.not-content *)) > thead > tr > th[align="right"] {
-  --at-apply: text-right;
+  text-align: right;
 }
 
 .sl-markdown-content table:not(:where(.not-content *)) > thead > tr > th[align="center"] {
-  --at-apply: text-center;
+  text-align: center;
 }
 
 .sl-markdown-content table:not(:where(.not-content *)) > tbody > tr {
-  --at-apply: m-0 p-0 border-t;
+  margin: 0;
+  padding: 0;
+  border-top-width: 1px;
 }
 
 .sl-markdown-content table:not(:where(.not-content *)) > tbody > tr:nth-child(even) {
-  --at-apply: bg-[hsl(var(--muted))];
+  --un-bg-opacity: 1;
+  background-color: hsl(var(--muted) / var(--un-bg-opacity));
 }
 
 .sl-markdown-content table:not(:where(.not-content *)) > tbody > tr > td {
-  --at-apply: text-left border px-4 py-2 border-solid;
+  text-align: left;
+  border-width: 1px;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  border-style: solid;
 }
 
 .sl-markdown-content table:not(:where(.not-content *)) > tbody > tr > td[align="right"] {
-  --at-apply: text-right;
+  text-align: right;
 }
 
 .sl-markdown-content table:not(:where(.not-content *)) > tbody > tr > td[align="center"] {
-  --at-apply: text-center;
+  text-align: center;
 }
