--- a/src/styles/mdx.css
+++ b/src/styles/mdx.css
@@ -3,11 +3,12 @@
 @import './mdx-tabs.css';
 
 .sl-markdown-content {
-  --at-apply: mt-6;
+  margin-top: 1.5rem;
 }
 
 .sl-markdown-content summary:not(:where(.not-content *))::marker, .sl-markdown-content summary:not(:where(.not-content *))::-webkit-details-marker{
-  --at-apply: hidden content-empty;
+  display: none;
+  content: "";
 }
 
 .sl-markdown-content details:not(:where(.not-content *)) {
@@ -15,50 +16,73 @@
 }
 
 .sl-markdown-content p:not(:where(.not-content *)):not(li p) {
-  --at-apply: leading-7 first:mt-6;
+  & {
+    line-height: 1.75rem; /* 28px */
+  }
+  &:first-child {
+    margin-top: 1.5rem; /* 24px */
+  }
 }
 
 .sl-markdown-content blockquote:not(:where(.not-content *)) {
-  --at-apply: italic mt-6 m-0 pl-4 border-l-2;
+  font-style: italic;
+  margin-top: 1.5rem;
+  margin: 0;
+  padding-left: 1rem;
+  border-left-width: 2px;
   border-left-style: solid;
 }
 
 .sl-markdown-content ul:not(:where(.not-content *)) {
-  --at-apply: list-disc ml-4 my-0;
+  list-style-type: disc;
+  margin-left: 1rem;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .sl-markdown-content ul:not(:where(.not-content *)) > li {
-  --at-apply: mt-2;
+  margin-top: 0.5rem;
 }
 
 .sl-markdown-content code:not(:where(.not-content *)) {
-  --at-apply: relative rounded text-sm font-semibold;
+  position: relative;
+  border-radius: 0.25rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 600;
   font-family: var(--sl-font-mono), monospace;
 }
 
 .sl-markdown-content a:not(:where(.not-content *)) {
-  --at-apply: font-medium underline decoration-dashed underline-offset-4 text-inherit transition-colors;
   text-decoration-style: dashed;
+  font-weight: 500;
+  text-decoration-line: underline;
+  text-decoration-style: dashed;
+  text-underline-offset: 4px;
+  color: inherit;
+  transition-property: color, background-color, border-color,
+    text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 .sl-markdown-content a:not(:where(.not-content *)):hover {
-  --at-apply: decoration-solid;
   text-decoration-style: solid;
 }
 
 .expressive-code .frame.has-title:not(.is-terminal) .title {
-  --at-apply: bg-transparent;
+  background-color: transparent;
 }
 
 .sl-markdown-content ol {
-  --at-apply: mt-2;
+  margin-top: 0.5rem;
 }
 
 .starlight-aside {
-  --at-apply: rounded-md;
+  border-radius: calc(var(--radius) - 2px);
 }
 
 .sl-markdown-content p:not(:where(.not-content *)):not(li p):first-child {
-  --at-apply: mt-0;
+  margin-top: 0;
 }
 
