--- a/src/styles/mdx-title.css
+++ b/src/styles/mdx-title.css
@@ -38,7 +38,8 @@
   font-size: 1.5rem;
   line-height: 2rem;
   line-height: 2rem;
-  margin: 0;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
   scroll-margin: 5rem;
 }
 
@@ -48,6 +49,7 @@
   font-size: 1.25rem;
   line-height: 1.75rem;
   line-height: 1.75rem;
-  margin: 0;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
   scroll-margin: 5rem;
 }
