--- a/src/overrides/PageSidebar.astro
+++ b/src/overrides/PageSidebar.astro
@@ -4,7 +4,7 @@ import TableOfContents from './TableOfContents.astro'
 
 {
   Astro.locals.starlightRoute.toc && (
-    <div class="pt-4 h-[calc(100vh-3.5rem)] mt-[-1.5rem] top-5 sticky">
+    <div class="sticky top-[calc(var(--header-height)+var(--sl-sidebar-gap,0.75rem))] h-[calc(100vh-var(--header-height)-var(--sl-sidebar-gap,0.75rem))]">
       <TableOfContents />
     </div>
   )
