--- a/docs/src/components/TOCExtra.astro
+++ b/docs/src/components/TOCExtra.astro
@@ -1,6 +1,6 @@
 ---
 ---
 
-<div class="mt-4 border-t border-dashed border-border/30 pt-4">
+<div class="mt-4 border-t border-dashed border-border pt-4 mr-1">
   123123
 </div>
